Bug 451735 - [activity diagram] Pressing OK in General Properties of Initial or End activity changes its type/shape
Summary: [activity diagram] Pressing OK in General Properties of Initial or End activi...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-20 18:45 UTC by Oliver Kellogg
Modified: 2022-03-20 19:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.33.80 (KDE releases 22.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Kellogg 2022-03-20 18:45:39 UTC
SUMMARY
***
In an activity diagram, pressing OK in the General Properties of an Initial or End activity changes its type/shape.
***


STEPS TO REPRODUCE
1. Start Umbrello, create an activity diagram, and create an Initial and/or and End activity on the diagram.
2. Double click on the Initial or End activity.
3. In the General Properties dialog that appears, press OK.

OBSERVED RESULT

The Initial or End activity changes type and shape to Normal activity.

EXPECTED RESULT

Initial or End activities shall not change type/shape unless this is specifically selected in the Properties dialog.

SOFTWARE/OS VERSIONS etc...
- does not matter, same problem everywhere, this is a long standing bug.
Comment 1 Oliver Kellogg 2022-03-20 19:01:17 UTC
Git commit 5a9b74243d2e59ab5b8ebf4ed12457cd282a3d79 by Oliver Kellogg.
Committed on 20/03/2022 at 19:00.
Pushed by okellogg into branch 'release/22.04'.

Fix "Pressing OK in General Properties of Initial or End activity changes its type/shape"

umbrello/dialogs/activitydialog.cpp
- In function applyPage case (item == pageItemGeneral),
  - add local bool setType initialized to false;
  - if m_GenPageWidgets.NormalRB->isChecked() is true then set newType
    to ActivityWidget::Normal and set setType true;
  - in the then-parts of the other isChecked() tests, in addition
    to setting newType set setType true;
  - after the if-else chain call m_pActivityWidget->setActivityType for
    newType only if setType is true.
FIXED-IN: 2.33.80 (KDE releases 22.03.80)

M  +15   -7    umbrello/dialogs/activitydialog.cpp

https://invent.kde.org/sdk/umbrello/commit/5a9b74243d2e59ab5b8ebf4ed12457cd282a3d79