Fix "Pressing OK in General Properties of Initial or End activity changes its type/shape"

umbrello/dialogs/activitydialog.cpp
- In function applyPage case (item == pageItemGeneral),
  - add local bool setType initialized to false;
  - if m_GenPageWidgets.NormalRB->isChecked() is true then set newType
    to ActivityWidget::Normal and set setType true;
  - in the then-parts of the other isChecked() tests, in addition
    to setting newType set setType true;
  - after the if-else chain call m_pActivityWidget->setActivityType for
    newType only if setType is true.

BUG: 451735
FIXED-IN: 2.33.80 (KDE releases 22.03.80)